--- a/main 3.html
+++ b/main 3.html
@@ -62,16 +62,16 @@
                             неким бюджетом и средствами, но разве нельзя нам немного помечтать? И тем самым слегка анонсировать мерч для будущих участников нашей IT Team. Недавно нам приходила в голову мысль о том, что на 100 или более подписчиков
                             мы могли бы разыграть между ними уникальные экземпляры своего мерча... Итак, первая подгруппа нашего мерча это "офисные" принадлежности, а именно блокнот на кольцах (размера А5) и коврик под мышку с принтом нашей команды естественно) 
                         </p>
-                       <img src="мерч/блокнот1.PNG" class="merch">
-                       <img src="мерч/блокнот2.PNG" class="merch">
-                       <img src="мерч/коврик.PNG" class="merch">
+                       <img src="блокнот1.PNG" class="merch">
+                       <img src="блокнот2.PNG" class="merch">
+                       <img src="коврик.PNG" class="merch">
                         <p class="text2">Вторая подгруппа нашего мерча это одежда, ну куда же без неё! В этой линейке представлены популярные oversize футболка и худи. Они будут выпускаться для каждого участника лично - с его никнеймом в Тик Токе. Также мы можем предложить участнику расцветку футболки или худи на выбор. Oversize вещи очень удобны тем, что не требуют знать размер покупателя, так как прекрасно подойдут всем без исключения.</p>
-                       <img src="мерч/футболка1.PNG" class="merch">
-                       <img src="мерч/футболка2.PNG" class="merch">
-                       <img src="мерч/худи.PNG" class="merch">
-                       <img src="мерч/худи2.PNG" class="merch">
+                       <img src="футболка1.PNG" class="merch">
+                       <img src="футболка2.PNG" class="merch">
+                       <img src="худи.PNG" class="merch">
+                       <img src="худи2.PNG" class="merch">
                         <p class="text2">Ну и, конечно же, мы не могли обойти стороной актуальную тему пандемии и масочного режима. Поэтому, хотя мы искренне надеемся, что режим самоизоляции в скором времени сойдёт на нет, мы представляем вам очень удобную и стильную маску с принтом нашей команды. </p>
-                        <img src="мерч/маска.PNG" class="merch">
+                        <img src="маска.PNG" class="merch">
                     </article>
                    
                 </div>
